# Embedded-system-programming-project

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/data/: posizioni_robot.txt
app/include/: main.h
app/src/: main.cpp
lib/: CMakeLists.txt
lib/gestore_robot/: CMakeLists.txt
lib/gestore_robot/include/: Gestore_robot.h
lib/gestore_robot/src/: Gestore_robot.cpp
lib/gnuplot/: CMakeLists.txt
lib/gnuplot/include/: gnuplot.h
lib/gnuplot/src/: gnuplot.cpp
lib/mappa/: CMakeLists.txt
lib/mappa/include/: Mappa.h  mappa.h
lib/mappa/src/: Mappa.cpp  mappa.cpp
lib/robot/: CMakeLists.txt
lib/robot/include/: robot.h
lib/robot/src/: robot.cpp
ros2_humble_ws/: obbiettivi_2.txt  obstacle_positions.txt  posizioni_robot.txt
ros2_humble_ws/src/rover/: CMakeLists.txt  package.xml
ros2_humble_ws/src/rover/include/gestore_robot/: Gestore_robot.h
ros2_humble_ws/src/rover/include/main/: main.h
ros2_humble_ws/src/rover/include/robot/: robot.h
ros2_humble_ws/src/rover/include/rover/: publisher.h
ros2_humble_ws/src/rover/src/: Gestore_robot.cpp  Mappa.cpp  main.cpp  publisher.cpp  robot.cpp
ros2_humble_ws/src/rover_visualizer/launch/: rviz_launch.py
test/: CMakeLists.txt
test/generazione_mappa/: CMakeLists.txt  ostacoli.csv  test_aggiornamento_robot.cpp  test_creazione_mappa.cpp
test/generazione_ostacolo/: CMakeLists.txt  ostacolo.cpp
test/movimento_robot_simultaneo/: CMakeLists.txt  lettura_satelliti.cpp  obbiettivi_1.txt  obbiettivi_2.txt  robot_simultanei.cpp
test/test_robot/: CMakeLists.txt  obbiettivi_multipli.cpp  test_aggiornamento_robot.cpp  test_robot_multipli.cpp
